# sales-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: drift-auditor.md  dry-auditor.md  link-validator.md  plan-reviewer.md  planner.md  spec-reviewer.md
.claude/commands/: challenge.md  plan.md  spec-check.md  spec-new-capability.md
.github/: copilot-instructions.md
.github/agents/: drift-auditor.agent.md  dry-auditor.agent.md  link-validator.agent.md  plan-reviewer.agent.md  planner.agent.md  spec-reviewer.agent.md
.github/instructions/: code-style.instructions.md  secret-hygiene.instructions.md  spec-driven.instructions.md  spec-files.instructions.md  tenant-isolation.instructions.md
.github/prompts/: challenge.prompt.md  plan.prompt.md  spec-check.prompt.md  spec-new-capability.prompt.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_fix_tenant_defaults.py  0003_pipeline_restructure.py  0004_customers_and_link_tracking.py  0005_cumulative_data_and_run_tracking.py  0006_spec_alignment_columns.py  0007_rename_customers_contacts_to_companies_people.py  0008_cost_tracking_and_page_excerpt.py  0009_events_run_id.py  0010_links_scrape_status_and_analysis.py  0011_companies_website_description.py  20260423_98cea20f65f2_merge_branches_links_scrape_status_and_.py
reports/: 2025-spec-alignment-and-tests.md  2026-04-22-cumulative-data-research-fix.md  2026-04-22-extract-prospect-entities.md  2026-04-23-cli-removal-and-api-drift.md  2026-04-23-cost-tracking-source-links.md  2026-04-23-customers-to-companies-contacts-to-people.md  2026-04-23-delete-tenant.md  2026-04-23-lead-company-research-concurrency.md  2026-04-23-scrape-limits-and-parallelism.md  2026-04-23-ui-leads-navigation-details.md  ui-build-plan.md
reports/sessions/: 2026-04-21-feat-implementation.md  2026-04-22-cumulative-data.md  2026-04-23-045412-feat-cumulative-data.md
spec/: README.md
spec/engineering/: ai-agents.md  code-style.md  commits.md  lessons.md  phases.md  secret-hygiene.md  spec-driven.md  tech-stack.md  tenant-isolation.md
tests/: conftest.py
(+192 files in other folders)
