[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zer0"
version = "0.1.0"
description = "Zer0 — autonomous multi-tenant sales agent platform. See spec/ for the source of truth."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Small Tech" }]

dependencies = [
    # spec/engineering/tech-stack.md
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "langgraph>=0.2",
    "anthropic>=0.40",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "structlog>=24.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "tavily-python>=0.3",
    "beautifulsoup4>=4.12",
    "google-api-python-client>=2.140",
    "google-auth>=2.30",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["zer0"]
